# smart_parallel_module_python

./: NOTES.md  README.md  pyproject.toml
smart_parallel/: __init__.py  core.py  profiler.py  strategy.py
smart_parallel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
smart_parallel/executors/: process_exec.py  thread_exec.py
tests/: test_1.py  test_basic.py  test_smart_parallel.py
